NIFI-15227 Replaced Framework use of DigestUtils with MessageDigestUtils
- Removed direct dependency on commons-codec from framework-cluster and web-api modules

Signed-off-by: Pierre Villard <pierre.villard.fr@gmail.com>

This closes #10547.